tests/incremental_eval_property_type/incremental_eval_property_type.exp
No errors!
Error --------------------------------------------------------------------------------------------------------- b.js:6:1

Cannot cast `a` to number because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:6:1
   6| a as number;
      ^

References:
   b.js:5:16
   5| declare var a: A;
                     ^ [1]
   b.js:6:6
   6| a as number;
           ^^^^^^ [2]



Found 1 error
